--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
+  <title>Hair Salon</title>
+</head>
+<body>
+  <h1>Welcome to Lindsey's Hair Salon!</h1>
+  <!-- <a href='/counter/new'>Begin</a>
+  <a href='/counter'></a> -->
+</body>
+</html>
