--- a/HairSalon/Views/Stylist/Index.cshtml
+++ b/HairSalon/Views/Stylist/Index.cshtml
@@ -7,7 +7,7 @@
   <h3>No stylists have been added yet!</h3>
 }
 
-@foreach (var stylist in Model)
+@foreach (Stylist stylist in Model)
 {
   <h3><a href='/stylist/@stylist.Id'>@stylist.FirstName @stylist.LastName</a></h3>
 }
