Add stylist controllers for new, delete, and edit

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Welcome to Lindsey's Hair Salon!</h1>
-  <!-- <a href='/counter/new'>Begin</a>
-  <a href='/counter'></a> -->
+  <h3><a href='/stylist'>View stylist</a></h3>
+  <h3><a href='/stylist/new'>Add a new stylist</a>
 </body>
 </html>
