Fix error in Stylist New controller

--- a/HairSalon/Views/Stylist/New.cshtml
+++ b/HairSalon/Views/Stylist/New.cshtml
@@ -1,13 +1,13 @@
 <h1>Add a stylist</h1>
 <p>Add a stylist here:</p>
 
-<form action="/stylists" method="post">
+<form action="/stylist" method="post">
 
-  <label for="stylistName">First Name</label>
-  <input id="stylistFirstName" name="stylistFirstName" type="text">
+  <label for="firstName">First Name</label>
+  <input id="firstName" name="firstName" type="text">
 <br>
-  <label for="stylistName">Last Name</label>
-  <input id="stylistLastName" name="stylistLastName" type="text">
+  <label for="lastName">Last Name</label>
+  <input id="lastName" name="lastName" type="text">
 <br>
   <button type="submit">Add</button>
 </form>
