--- a/HairSalon/Views/Client/New.cshtml
+++ b/HairSalon/Views/Client/New.cshtml
@@ -1,3 +1,5 @@
+@using HairSalon.Models
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,13 +11,13 @@
 
   <form action='/stylist/@Model.Id/client' method='post'>
 
-    <label for="clientName">First Name</label>
-    <input id="clientFirstName" name="clientFirstName" type="text">
+    <label for="firstName">First Name</label>
+    <input id="firstName" name="firstName" type="text">
     <br>
-    <label for="clientName">Last Name</label>
-    <input id="clientLastName" name="clientLastName" type="text">
+    <label for="lastName">Last Name</label>
+    <input id="lastName" name="lastName" type="text">
     <br>
-    <label for="clientName">Client Since</label>
+    <label for="clientSince">Client Since</label>
     <input id="clientSince" name="clientSince" type="text">
     <br>
 
