--- a/HairSalon/Views/Specialty/New.cshtml
+++ b/HairSalon/Views/Specialty/New.cshtml
@@ -8,4 +8,4 @@
   <button type="submit">Add</button>
 </form>
 
-<h4><a href="/">Return home</a></h4>
+<h4><a href="/stylist/{stylistId}/">Return Back To Stylist</a></h4>
